force-app/main/default/objects/WhatsApp_Error_Log__c/WhatsApp_Error_Log__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Error Log</label>
    <nameField>
        <displayFormat>ERR-{00000}</displayFormat>
        <label>Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>