force-app/main/default/objects/WhatsApp_Error_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API_ERROR</fullName>
                <label>API Error</label>
            </value>
            <value>
                <fullName>WEBHOOK_ERROR</fullName>
                <label>Webhook Error</label>
            </value>
            <value>
                <fullName>MEDIA_ERROR</fullName>
                <label>Media Error</label>
            </value>
            <value>
                <fullName>AGENTFORCE_ERROR</fullName>
                <label>Agentforce Error</label>
            </value>
            <value>
                <fullName>VALIDATION_ERROR</fullName>
                <label>Validation Error</label>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>