force-app/main/default/objects/WhatsApp_Error_Log__c/fields/Related_Message__c.field-meta.xml
<CustomField>
    <fullName>Related_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Message</label>
    <referenceTo>WhatsApp_Message__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>